--- a/css/en/style.css
+++ b/css/en/style.css
@@ -722,6 +722,10 @@ body {
 	visibility: hidden;
 }
 
+#contactD1 address .addrIndent3 {
+	padding-left: 17px;
+}
+
 #contactD1, #contactD2 {
 
 	display: flex;
@@ -732,7 +736,7 @@ body {
 	box-shadow: 4px 6px 10px 0 rgba(0, 0, 0, 0.5), 0 6px 10px 0 rgba(0, 0, 0, 0.3);
 	border: 10px solid rgb(139, 140, 164);
 
-	height: 447px;
+	height: 500px;
 	padding-top: 5px; 
 	padding-left: 20px; 
 	padding-right: 20px;
@@ -1387,6 +1391,10 @@ a:active#inv {
 
 	}
 
+	.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
+    	max-height: 440px;
+	}
+
 
 	.jumbotron img {
 		margin-top: 10px;
@@ -1575,6 +1583,10 @@ a:active#inv {
 	#contactD1 #map2 {
 		height: 200px;
 		margin: 5px;
+	}
+
+	#contactD1 address .addrIndent3 {
+		padding-left: 40px;
 	}
 
 
